--- a/app/views/application/hello.html.erb
+++ b/app/views/application/hello.html.erb
@@ -1,5 +1,19 @@
+<%# <% If the user is not logged in, the page should show them a login link.
+If the user is logged in, the page should say, "hi, #{name}", and provide a logout link.%>
+
+<% if session[:name] %>
+
 <h1>Hi, <%= session[:name] %>.</h1>
 <%= form_tag ({controller: 'sessions', action: 'destroy', method: 'post'}) do %>
   <input type=submit value='logout'>
 <% end %>
+
+<% else %>
+
+<%= link_to "Login", new_session_path %>
+
+<% end %>
+
+
+
 
